--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.1.0",
+    "ethereumjs-util": "^7.1.5",
     "ethers": "^6.13.4"
   }
 }
