remove the origin file, and add the deploy.js

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@openzeppelin/contracts": "^5.1.0",
     "@openzeppelin/contracts-upgradeable": "^4.9.6",
     "ethereumjs-util": "^7.1.5",
-    "ethers": "^6.13.4"
+    "ethers": "^6.13.4",
+    "solc": "^0.8.20"
   }
 }
