add the new version

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@openzeppelin/hardhat-upgrades": "^3.9.0",
     "hardhat": "^2.22.17"
   },
   "dependencies": {
