--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@openzeppelin/hardhat-upgrades": "^3.9.0",
     "hardhat": "^2.22.17",
     "hardhat-console": "^1.0.0",
+    "jest": "^29.7.0",
     "patch-package": "^8.0.0"
   },
   "dependencies": {
